feat(gradle):重构项目，改由gradle构建